# mirage

./: README.md  confusion_matrix.csv  mirage_map.csv  plots.py  pyproject.toml  results.csv  simulate.py  tmp_results.csv  tmp_summary.csv  tournament.py
criticality/: __init__.py  calibration.py  data_ff.py  events.py  plots.py  tournament.py  utils.py  vol_filter.py
criticality.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
criticality/models/: __init__.py  hawkes_dt.py  hawkes_dt_flexbaseline.py  hawkes_dt_mixture.py  poisson_flexbaseline.py  poisson_iid.py  rs_hawkes_dt.py  rs_poisson_dt.py
scripts/: inspect_ff.py  make_figures.py  run_calibration.py  run_tournament.py
tests/: test_events.py  test_models.py  test_rs_hawkes_gem.py  test_vol_filter.py
