[project]
name = "criticality"
version = "0.1.0"
description = "Criticality modeling sandbox"
authors = [{ name = "Codex" }]
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "statsmodels",
    "matplotlib",
]

[project.optional-dependencies]
extras = ["arch"]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
